# todo_app

./: README.md  docker-compose.yaml
api/: Dockerfile  api.py  app.py  config.py  database.py  pyproject.toml  sample.env
api/tasks/: models.py  schemas.py
todo-frontend/: .gitignore  Dockerfile  package-lock.json  package.json
todo-frontend/src/: App.tsx  api.ts  index.css  type.d.ts
todo-frontend/src/components/: AddTask.tsx  DisplayTask.tsx
